--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 06 12:54:28 CST 2019
-sdk.dir=/home/toosaka/Android/Sdk
+#Wed May 08 16:50:30 CST 2019
+ndk.dir=D\:\\androidstudio\\asdk\\ndk-bundle
+sdk.dir=D\:\\androidstudio\\asdk
